creates book request end point
